force-app/main/default/objects/Primeo_API__mdt/Primeo_API__mdt.object-meta.xml
<CustomObject>
    <description>Contient les infos permettant la connexion à l&apos;API Primeo</description>
    <label>Primeo API</label>
    <pluralLabel>Primeo APIs</pluralLabel>
</CustomObject>