force-app/main/default/objects/Primeo_API__mdt/fields/Get_Offer_Endpoint__c.field-meta.xml
<CustomField>
    <fullName>Get_Offer_Endpoint__c</fullName>
    <label>Get Offer Endpoint</label>
    <length>50</length>
    <type>Text</type>
</CustomField>