force-app/main/default/objects/Primeo_API__mdt/fields/Get_Token_Endpoint__c.field-meta.xml
<CustomField>
    <fullName>Get_Token_Endpoint__c</fullName>
    <label>Get Token Endpoint</label>
    <length>50</length>
    <type>Text</type>
</CustomField>