force-app/main/default/objects/Primeo_API__mdt/fields/Valid_Offer_Endpoint__c.field-meta.xml
<CustomField>
    <fullName>Valid_Offer_Endpoint__c</fullName>
    <label>Valid Offer Endpoint</label>
    <length>50</length>
    <type>Text</type>
</CustomField>